--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>eduace</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css"
+          integrity="sha384-zTROYFVGOfTw7JV7KUu8udsvW2fx4lWOsCEDqhBreBwlHI4ioVRtmIvEThzJHGET" crossorigin="anonymous">
 </head>
 <body>
 <div id="root"></div>
